--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,10 +1,19 @@
+@import "include-media";
+
 $background-login-form: #34164b;
 $fixed-width: 400px;
+$small-fixed-width: 350px;
 
 .login {
     font-weight: 700;
     background: $background-login-form;
-    width: $fixed-width;
+    @include media(">=phone") {
+        min-width: $small-fixed-width;
+    }
+    @include media(">=tablet") {
+        min-width: $fixed-width;
+    }
+    width: 100%;
     border-radius: 4px;
     box-shadow: 0 0 9px 3px rgba(226, 30, 228, 0.24);
     text-align: center;
