--- a/src/theme.scss
+++ b/src/theme.scss
@@ -56,7 +56,7 @@ $mat-dark-theme-foreground: (
 // Background config
 
 // Dark bg
-$dark-background:     #2c2c2c;
+$dark-background:     #b1a9a9;
 $dark-bg-lighter-5:   lighten($dark-background, 5%);
 $dark-bg-lighter-10:  lighten($dark-background, 10%);
 $dark-bg-lighter-20:  lighten($dark-background, 20%);
