--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -19,6 +19,11 @@ $small-fixed-width: 350px;
     text-align: center;
     padding: 1em;
 
+    input[type="password"]::-ms-reveal,
+    input[type="password"]::-ms-clear {
+        display: none;
+    }
+
     &__sign_in {
         color: white;
     }
@@ -30,11 +35,6 @@ $small-fixed-width: 350px;
 
     &__field {
         width: 100%;
-    }
-
-    &__input {
-        color: white;
-        border: none;
     }
 
     &__submit {
