--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -20,6 +20,15 @@ $small-fixed-width: 350px;
     text-align: center;
     padding: 1em;
 
+    input[type="password"]::-ms-reveal,
+    input[type="password"]::-ms-clear {
+        display: none;
+    }
+
+    &__default_errors {
+        padding-bottom: 2em;
+    }
+
     &__form {
         display: flex;
         flex-direction: column;
@@ -27,11 +36,7 @@ $small-fixed-width: 350px;
 
     &__field {
         width: 100%;
-    }
-
-    &__input {
         color: white;
-        border: none;
     }
 
     &__submit {
@@ -44,7 +49,7 @@ $small-fixed-width: 350px;
         align-items: center;
         justify-content: center;
         color: $color;
-        gap: .25em;
+        gap: 0.25em;
 
         a {
             color: white;
