--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     @for (tile of getRangeArray(visualization); track tile) {
         <div class="row center-xs">
             <div class="col-xs-12 col-md-8 col-lg-7">
-                <app-article></app-article>
+                <app-event></app-event>
             </div>
         </div>
     }
