--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
           <h2 class="login__sign_in">SIGN IN</h2>
           <mat-form-field class="login__field">
             <mat-label>Email</mat-label>
-            <input type="email" matInput placeholder="" formControlName="email" required>
+            <input type="email" matInput formControlName="email" required>
             <val-errors controlName="email">
               <ng-template valError="required"><mat-error>Email is <strong>required</strong></mat-error></ng-template>
               <ng-template valError="email"><mat-error>Invalid email</mat-error></ng-template>
@@ -14,7 +14,7 @@
           </mat-form-field>
           <mat-form-field class="login__field">
             <mat-label>Password</mat-label>
-            <input type="password" matInput placeholder="" formControlName="password" required>
+            <input type="password" matInput formControlName="password" required>
             <val-errors controlName="password">
               <ng-template valError="required"><mat-error>Password is <strong>required</strong></mat-error></ng-template>
               <ng-template valError="minlength"><mat-error>Password should be 8 characters min</mat-error></ng-template>
