--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import "./flex.scss";
 @import "./theme.scss";
+@import "./utils.scss";
 
 *,
 *::before,
@@ -69,3 +70,4 @@ html {
     scroll-behavior: smooth; /* Makes normal scrolling smooth */
     font-family: "Lato", sans-serif;
 }
+
