--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -2,6 +2,9 @@
     <a type="button" mat-icon-button color="accent" routerLink="/home" routerLinkActive="active">
         <mat-icon>home</mat-icon>
     </a>
+    <a type="button" mat-icon-button color="accent">
+        <mat-icon>videogame_asset</mat-icon>
+    </a>
     <span class="spacer"></span>
     @if (routeControl) {
     <a type="button" mat-button color="accent" routerLink="/user" routerLinkActive="active">
