--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,13 @@
-<div class="container container--expand">
+<div class="container container--expand" infiniteScroll [infiniteScrollThrottle]="scrollThrottleMs"
+    (scrolled)="lazyScrollLoading()">
     <div class="row flex-wrap">
-        @for (tile of getRangeArray(visualization); track tile) {
-        <div class="col-xs-12 col-sm-6 col-lg-3 flex justify-center">
-            <app-event></app-event>
-        </div>
+        @if (nodes$) {
+            @for (event of (nodes$ | async); track event) {
+            <div class="col-xs-12 col-sm-6 col-lg-3 flex justify-center">
+                <app-event [event]="event"></app-event>
+            </div>
+            }
+
         }
     </div>
 </div>
